search with timer to avoid too much api calls

--- a/src/pages/PokemonList.scss
+++ b/src/pages/PokemonList.scss
@@ -1,3 +1,6 @@
+html {
+  background-color: #61dafb;
+}
 .pokemon-elem {
   padding: 5px;
   width: 80%;
@@ -20,7 +23,6 @@
 
 .right {
   width: 100%;
-  background-color: #61dafb;
 }
 
 .left {
